--- a/docs/user/reporting/reporting-troubleshooting.asciidoc
+++ b/docs/user/reporting/reporting-troubleshooting.asciidoc
@@ -171,5 +171,5 @@ Chromium is not compatible with ARM RHEL/CentOS.
 
 https://www.elastic.co/elastic-maps-service[{ems} ({ems-init})] is a service that hosts
 tile layers and vector shapes of administrative boundaries.
-Reports containing Maps with missing basemap layers or administrative boundaries is due to the kibana server not having access to EMS.
-See <<maps-connect-to-ems>> for information on how to connect your {kib} server to EMS.
+If a report contains a map with a missing basemap layer or administrative boundary, the {kib} server does not have access to {ems-init}.
+See <<maps-connect-to-ems>> for information on how to connect your {kib} server to {ems-init}.
