chore(NA): add rpm to brew

--- a/dev_docs/tutorials/building_a_kibana_distributable.mdx
+++ b/dev_docs/tutorials/building_a_kibana_distributable.mdx
@@ -35,7 +35,7 @@ Please make sure you have the following dependencies installed:
 **On OSX/macOS:**
 
 ```bash
-brew install gnu-tar
+brew install gnu-tar rpm
 ```
 
 **On Red Hat systems (Fedora 22 or older, CentOS, etc):**
