chore(NA): update dev_docs/tutorials/building_a_kibana_distributable.mdx
Co-authored-by: Jonathan Budzenski <jon@budzenski.me>

--- a/dev_docs/tutorials/building_a_kibana_distributable.mdx
+++ b/dev_docs/tutorials/building_a_kibana_distributable.mdx
@@ -121,7 +121,7 @@ yarn build
 
 At the end you will get the Kibana distributable archives plus the docker images and both an rpm and a deb package.
 
-To specify just a single installation package or docker iamges to build instead of all of them you can add rpm, deb or docker-images as an argument:
+To specify just a single installation package or docker images to build instead of all of them you can add rpm, deb or docker-images as an argument:
 
 ```bash
 yarn build --deb
