chore(NA): update dev_docs/tutorials/building_a_kibana_distributable.mdx
Co-authored-by: Jonathan Budzenski <jon@budzenski.me>

--- a/dev_docs/tutorials/building_a_kibana_distributable.mdx
+++ b/dev_docs/tutorials/building_a_kibana_distributable.mdx
@@ -78,7 +78,7 @@ For Docker, the installation instructions can be found at [Install Docker Engine
 
 ## Create a Kibana distributable
 
-In a great majority of the use cases where we need to build a Kibana distributable, we just need the archives containng the 
+In a great majority of the use cases where we need to build a Kibana distributable, we just need the archives containing the 
 node executable and the bundled code of the application.
 
 By doing that Linux installation packages and docker images will be excluded and as a result, the build will be quicker.
