chore(NA): moving @kbn/docs-utils into bazel

--- a/docs/developer/getting-started/monorepo-packages.asciidoc
+++ b/docs/developer/getting-started/monorepo-packages.asciidoc
@@ -74,6 +74,7 @@ yarn kbn watch-bazel
 - @kbn/config-schema
 - @kbn/crypto
 - @kbn/dev-utils
+- @kbn/docs-utils
 - @kbn/es
 - @kbn/eslint-import-resolver-kibana
 - @kbn/eslint-plugin-eslint
