--- a/dev_docs/tutorials/sample_data.mdx
+++ b/dev_docs/tutorials/sample_data.mdx
@@ -9,18 +9,18 @@ tags: ['kibana', 'onboarding', 'dev', 'architecture', 'tutorials']
 
 ## Installation from the UI
 
-1) Navigate to the home page
-1) Click "Add data"
-1) Click on the "Sample data" tab
-1) Select a dataset by clicking on the "Add data" button
+1. Navigate to the home page
+2. Click **Add data**
+3. Click on the **Sample data** tab
+4. Select a dataset by clicking on the "Add data" button
 
 ![Sample Data](../assets/sample_data.png)
 
 ## CSV Upload
 
-1) Navigate to the Machine Learning application
-1) Click on the "Data Visualizer" tab
-1) Click on "Select file" in the "Import data" container
+1. Navigate to the **Machine Learning** application
+2. Click on the **Data Visualizer** tab
+3. Click on **Select file** in the **Import data** container
 
 ![CSV Upload](../assets/ml_csv_upload.png)
 
